tests/snapshots/snapshots__fixture_color_level2.snap
---
source: tests/snapshots.rs
expression: output
---
LICENSE.md
README.md
     1→# color [![](https://github.com/fatih/color/workflows/build/badge.svg)](https://github.com/fatih/color/actions) [![PkgGoDev](https://pkg.go.dev/badge/github.com/fatih/color)](https://pkg.go.dev/github.com/fatih/color)
    10→## Install
    16→## Examples
    18→### Standard colors
    33→### RGB colors
    45→### Mix and reuse colors
    71→### Use your own output (io.Writer)
    81→### Custom print functions (PrintFunc)
    94→### Custom fprint functions (FprintFunc)
   105→### Insert into noncolor strings (SprintFunc)
   124→### Plug into existing code
   142→### Disable/Enable color
   177→## GitHub Actions
   182→## Credits
   187→## License
color.go
    15→var (
    22→	NoColor = noColorIsSet() || os.Getenv("TERM") == "dumb" ||
    27→	Output = colorable.NewColorableStdout()
    30→	Error = colorable.NewColorableStderr()
    34→	colorsCache   = make(map[Attribute]*Color)
    35→	colorsCacheMu sync.Mutex // protects colorsCache
    39→func noColorIsSet() bool {
    44→type Color struct {
    50→type Attribute int
    52→const escape = "\x1b"
    55→const (
    56→	Reset Attribute = iota
    57→	Bold
    58→	Faint
    59→	Italic
    60→	Underline
    61→	BlinkSlow
    62→	BlinkRapid
    63→	ReverseVideo
    64→	Concealed
    65→	CrossedOut
    68→const (
    69→	ResetBold Attribute = iota + 22
    70→	ResetItalic
    71→	ResetUnderline
    72→	ResetBlinking
    74→	ResetReversed
    75→	ResetConcealed
    76→	ResetCrossedOut
    79→var mapResetAttributes map[Attribute]Attribute = map[Attribute]Attribute{
    92→const (
    93→	FgBlack Attribute = iota + 30
    94→	FgRed
    95→	FgGreen
    96→	FgYellow
    97→	FgBlue
    98→	FgMagenta
    99→	FgCyan
   100→	FgWhite
   103→	foreground
   107→const (
   108→	FgHiBlack Attribute = iota + 90
   109→	FgHiRed
   110→	FgHiGreen
   111→	FgHiYellow
   112→	FgHiBlue
   113→	FgHiMagenta
   114→	FgHiCyan
   115→	FgHiWhite
   119→const (
   120→	BgBlack Attribute = iota + 40
   121→	BgRed
   122→	BgGreen
   123→	BgYellow
   124→	BgBlue
   125→	BgMagenta
   126→	BgCyan
   127→	BgWhite
   130→	background
   134→const (
   135→	BgHiBlack Attribute = iota + 100
   136→	BgHiRed
   137→	BgHiGreen
   138→	BgHiYellow
   139→	BgHiBlue
   140→	BgHiMagenta
   141→	BgHiCyan
   142→	BgHiWhite
   146→func New(value ...Attribute) *Color {
   160→func RGB(r, g, b int) *Color {
   165→func BgRGB(r, g, b int) *Color {
   171→func (c *Color) AddRGB(r, g, b int) *Color {
   178→func (c *Color) AddBgRGB(r, g, b int) *Color {
   185→func Set(p ...Attribute) *Color {
   193→func Unset() {
   202→func (c *Color) Set() *Color {
   211→func (c *Color) unset() {
   222→func (c *Color) SetWriter(w io.Writer) *Color {
   233→func (c *Color) UnsetWriter(w io.Writer) {
   243→func (c *Color) Add(value ...Attribute) *Color {
   253→func (c *Color) Fprint(w io.Writer, a ...interface{}) (n int, err error) {
   265→func (c *Color) Print(a ...interface{}) (n int, err error) {
   276→func (c *Color) Fprintf(w io.Writer, format string, a ...interface{}) (n int, err error) {
   286→func (c *Color) Printf(format string, a ...interface{}) (n int, err error) {
   297→func (c *Color) Fprintln(w io.Writer, a ...interface{}) (n int, err error) {
   306→func (c *Color) Println(a ...interface{}) (n int, err error) {
   311→func (c *Color) Sprint(a ...interface{}) string {
   316→func (c *Color) Sprintln(a ...interface{}) string {
   321→func (c *Color) Sprintf(format string, a ...interface{}) string {
   327→func (c *Color) FprintFunc() func(w io.Writer, a ...interface{}) {
   335→func (c *Color) PrintFunc() func(a ...interface{}) {
   343→func (c *Color) FprintfFunc() func(w io.Writer, format string, a ...interface{}) {
   351→func (c *Color) PrintfFunc() func(format string, a ...interface{}) {
   359→func (c *Color) FprintlnFunc() func(w io.Writer, a ...interface{}) {
   367→func (c *Color) PrintlnFunc() func(a ...interface{}) {
   379→func (c *Color) SprintFunc() func(a ...interface{}) string {
   388→func (c *Color) SprintfFunc() func(format string, a ...interface{}) string {
   397→func (c *Color) SprintlnFunc() func(a ...interface{}) string {
   405→func (c *Color) sequence() string {
   416→func (c *Color) wrap(s string) string {
   424→func (c *Color) format() string {
   428→func (c *Color) unformat() string {
   446→func (c *Color) DisableColor() {
   452→func (c *Color) EnableColor() {
   456→func (c *Color) isNoColorSet() bool {
   467→func (c *Color) Equals(c2 *Color) bool {
   487→func (c *Color) attrExists(a Attribute) bool {
   497→func boolPtr(v bool) *bool {
   501→func getCachedColor(p Attribute) *Color {
   514→func colorPrint(format string, p Attribute, a ...interface{}) {
   528→func colorString(format string, p Attribute, a ...interface{}) string {
   540→func Black(format string, a ...interface{}) { colorPrint(format, FgBlack, a...) }
   544→func Red(format string, a ...interface{}) { colorPrint(format, FgRed, a...) }
   548→func Green(format string, a ...interface{}) { colorPrint(format, FgGreen, a...) }
   552→func Yellow(format string, a ...interface{}) { colorPrint(format, FgYellow, a...) }
   556→func Blue(format string, a ...interface{}) { colorPrint(format, FgBlue, a...) }
   560→func Magenta(format string, a ...interface{}) { colorPrint(format, FgMagenta, a...) }
   564→func Cyan(format string, a ...interface{}) { colorPrint(format, FgCyan, a...) }
   568→func White(format string, a ...interface{}) { colorPrint(format, FgWhite, a...) }
   572→func BlackString(format string, a ...interface{}) string { return colorString(format, FgBlack, a...) }
   576→func RedString(format string, a ...interface{}) string { return colorString(format, FgRed, a...) }
   580→func GreenString(format string, a ...interface{}) string { return colorString(format, FgGreen, a...) }
   584→func YellowString(format string, a ...interface{}) string { return colorString(format, FgYellow, a...) }
   588→func BlueString(format string, a ...interface{}) string { return colorString(format, FgBlue, a...) }
   592→func MagentaString(format string, a ...interface{}) string {
   598→func CyanString(format string, a ...interface{}) string { return colorString(format, FgCyan, a...) }
   602→func WhiteString(format string, a ...interface{}) string { return colorString(format, FgWhite, a...) }
   606→func HiBlack(format string, a ...interface{}) { colorPrint(format, FgHiBlack, a...) }
   610→func HiRed(format string, a ...interface{}) { colorPrint(format, FgHiRed, a...) }
   614→func HiGreen(format string, a ...interface{}) { colorPrint(format, FgHiGreen, a...) }
   618→func HiYellow(format string, a ...interface{}) { colorPrint(format, FgHiYellow, a...) }
   622→func HiBlue(format string, a ...interface{}) { colorPrint(format, FgHiBlue, a...) }
   626→func HiMagenta(format string, a ...interface{}) { colorPrint(format, FgHiMagenta, a...) }
   630→func HiCyan(format string, a ...interface{}) { colorPrint(format, FgHiCyan, a...) }
   634→func HiWhite(format string, a ...interface{}) { colorPrint(format, FgHiWhite, a...) }
   638→func HiBlackString(format string, a ...interface{}) string {
   644→func HiRedString(format string, a ...interface{}) string { return colorString(format, FgHiRed, a...) }
   648→func HiGreenString(format string, a ...interface{}) string {
   654→func HiYellowString(format string, a ...interface{}) string {
   660→func HiBlueString(format string, a ...interface{}) string { return colorString(format, FgHiBlue, a...) }
   664→func HiMagentaString(format string, a ...interface{}) string {
   670→func HiCyanString(format string, a ...interface{}) string { return colorString(format, FgHiCyan, a...) }
   674→func HiWhiteString(format string, a ...interface{}) string {
   679→func sprintln(a ...interface{}) string {
color_windows.go
     9→func init() {
doc.go
