tests/snapshots/snapshots__fixture_color_level3.snap
---
source: tests/snapshots.rs
expression: output
---
LICENSE.md
README.md
     1→# color [![](https://github.com/fatih/color/workflows/build/badge.svg)](https://github.com/fatih/color/actions) [![PkgGoDev](https://pkg.go.dev/badge/github.com/fatih/color)](https://pkg.go.dev/github.com/fatih/color)
     2→
     3→Color lets you use colorized outputs in terms of [ANSI Escape
     4→Codes](http://en.wikipedia.org/wiki/ANSI_escape_code#Colors) in Go (Golang). It
     5→has support for Windows too! The API can be used in several ways, pick one that
     6→suits you.
    10→## Install
    11→
    12→```
    13→go get github.com/fatih/color
    14→```
    16→## Examples
    17→
    18→### Standard colors
    19→
    20→```go
    21→// Print with default helper functions
    22→color.Cyan("Prints text in cyan.")
    33→### RGB colors
    34→
    35→If your terminal supports 24-bit colors, you can use RGB color codes.
    45→### Mix and reuse colors
    46→
    47→```go
    48→// Create a new color object
    49→c := color.New(color.FgCyan).Add(color.Underline)
    50→c.Println("Prints cyan text with an underline.")
    71→### Use your own output (io.Writer)
    72→
    73→```go
    74→// Use your own io.Writer output
    75→color.New(color.FgBlue).Fprintln(myWriter, "blue color!")
    81→### Custom print functions (PrintFunc)
    82→
    83→```go
    84→// Create a custom print function for convenience
    85→red := color.New(color.FgRed).PrintfFunc()
    86→red("Warning")
    87→red("Error: %s", err)
    94→### Custom fprint functions (FprintFunc)
    95→
    96→```go
    97→blue := color.New(color.FgBlue).FprintfFunc()
    98→blue(myWriter, "important notice: %s", stars)
   105→### Insert into noncolor strings (SprintFunc)
   106→
   107→```go
   108→// Create SprintXxx functions to mix strings with other non-colorized strings:
   109→yellow := color.New(color.FgYellow).SprintFunc()
   110→red := color.New(color.FgRed).SprintFunc()
   111→fmt.Printf("This is a %s and this is %s.\n", yellow("warning"), red("error"))
   124→### Plug into existing code
   125→
   126→```go
   127→// Use handy standard colors
   128→color.Set(color.FgYellow)
   142→### Disable/Enable color
   143→
   144→There might be a case where you want to explicitly disable/enable color output. the 
   145→`go-isatty` package will automatically disable color output for non-tty output streams 
   146→(for example if the output were piped directly to `less`).
   177→## GitHub Actions
   178→
   179→To output color in GitHub Actions (or other CI systems that support ANSI colors), make sure to set `color.NoColor = false` so that it bypasses the check for non-tty output streams. 
   182→## Credits
   183→
   184→* [Fatih Arslan](https://github.com/fatih)
   185→* Windows support via @mattn: [colorable](https://github.com/mattn/go-colorable)
   187→## License
   188→
   189→The MIT License (MIT) - see [`LICENSE.md`](https://github.com/fatih/color/blob/master/LICENSE.md) for more details
color.go
    15→var (
    16→	// NoColor defines if the output is colorized or not. It's dynamically set to
    22→	NoColor = noColorIsSet() || os.Getenv("TERM") == "dumb" ||
    25→	// Output defines the standard output of the print functions. By default,
    27→	Output = colorable.NewColorableStdout()
    29→	// Error defines a color supporting writer for os.Stderr.
    30→	Error = colorable.NewColorableStderr()
    34→	colorsCache   = make(map[Attribute]*Color)
    35→	colorsCacheMu sync.Mutex // protects colorsCache
    39→func noColorIsSet() bool {
    43→// Color defines a custom color object which is defined by SGR parameters.
    44→type Color struct {
    49→// Attribute defines a single SGR Code
    50→type Attribute int
    52→const escape = "\x1b"
    55→const (
    56→	Reset Attribute = iota
    57→	Bold
    58→	Faint
    59→	Italic
    60→	Underline
    61→	BlinkSlow
    62→	BlinkRapid
    63→	ReverseVideo
    64→	Concealed
    65→	CrossedOut
    68→const (
    69→	ResetBold Attribute = iota + 22
    70→	ResetItalic
    71→	ResetUnderline
    72→	ResetBlinking
    74→	ResetReversed
    75→	ResetConcealed
    76→	ResetCrossedOut
    79→var mapResetAttributes map[Attribute]Attribute = map[Attribute]Attribute{
    92→const (
    93→	FgBlack Attribute = iota + 30
    94→	FgRed
    95→	FgGreen
    96→	FgYellow
    97→	FgBlue
    98→	FgMagenta
    99→	FgCyan
   100→	FgWhite
   103→	foreground
   107→const (
   108→	FgHiBlack Attribute = iota + 90
   109→	FgHiRed
   110→	FgHiGreen
   111→	FgHiYellow
   112→	FgHiBlue
   113→	FgHiMagenta
   114→	FgHiCyan
   115→	FgHiWhite
   119→const (
   120→	BgBlack Attribute = iota + 40
   121→	BgRed
   122→	BgGreen
   123→	BgYellow
   124→	BgBlue
   125→	BgMagenta
   126→	BgCyan
   127→	BgWhite
   130→	background
   134→const (
   135→	BgHiBlack Attribute = iota + 100
   136→	BgHiRed
   137→	BgHiGreen
   138→	BgHiYellow
   139→	BgHiBlue
   140→	BgHiMagenta
   141→	BgHiCyan
   142→	BgHiWhite
   145→// New returns a newly created color object.
   146→func New(value ...Attribute) *Color {
   159→// RGB returns a new foreground color in 24-bit RGB.
   160→func RGB(r, g, b int) *Color {
   164→// BgRGB returns a new background color in 24-bit RGB.
   165→func BgRGB(r, g, b int) *Color {
   169→// AddRGB is used to chain foreground RGB SGR parameters. Use as many as parameters to combine
   171→func (c *Color) AddRGB(r, g, b int) *Color {
   176→// AddRGB is used to chain background RGB SGR parameters. Use as many as parameters to combine
   178→func (c *Color) AddBgRGB(r, g, b int) *Color {
   183→// Set sets the given parameters immediately. It will change the color of
   185→func Set(p ...Attribute) *Color {
   191→// Unset resets all escape attributes and clears the output. Usually should
   193→func Unset() {
   201→// Set sets the SGR sequence.
   202→func (c *Color) Set() *Color {
   211→func (c *Color) unset() {
   219→// SetWriter is used to set the SGR sequence with the given io.Writer. This is
   222→func (c *Color) SetWriter(w io.Writer) *Color {
   231→// UnsetWriter resets all escape attributes and clears the output with the give
   233→func (c *Color) UnsetWriter(w io.Writer) {
   241→// Add is used to chain SGR parameters. Use as many as parameters to combine
   243→func (c *Color) Add(value ...Attribute) *Color {
   248→// Fprint formats using the default formats for its operands and writes to w.
   253→func (c *Color) Fprint(w io.Writer, a ...interface{}) (n int, err error) {
   260→// Print formats using the default formats for its operands and writes to
   265→func (c *Color) Print(a ...interface{}) (n int, err error) {
   272→// Fprintf formats according to a format specifier and writes to w.
   276→func (c *Color) Fprintf(w io.Writer, format string, a ...interface{}) (n int, err error) {
   283→// Printf formats according to a format specifier and writes to standard output.
   286→func (c *Color) Printf(format string, a ...interface{}) (n int, err error) {
   293→// Fprintln formats using the default formats for its operands and writes to w.
   297→func (c *Color) Fprintln(w io.Writer, a ...interface{}) (n int, err error) {
   301→// Println formats using the default formats for its operands and writes to
   306→func (c *Color) Println(a ...interface{}) (n int, err error) {
   310→// Sprint is just like Print, but returns a string instead of printing it.
   311→func (c *Color) Sprint(a ...interface{}) string {
   315→// Sprintln is just like Println, but returns a string instead of printing it.
   316→func (c *Color) Sprintln(a ...interface{}) string {
   320→// Sprintf is just like Printf, but returns a string instead of printing it.
   321→func (c *Color) Sprintf(format string, a ...interface{}) string {
   325→// FprintFunc returns a new function that prints the passed arguments as
   327→func (c *Color) FprintFunc() func(w io.Writer, a ...interface{}) {
   333→// PrintFunc returns a new function that prints the passed arguments as
   335→func (c *Color) PrintFunc() func(a ...interface{}) {
   341→// FprintfFunc returns a new function that prints the passed arguments as
   343→func (c *Color) FprintfFunc() func(w io.Writer, format string, a ...interface{}) {
   349→// PrintfFunc returns a new function that prints the passed arguments as
   351→func (c *Color) PrintfFunc() func(format string, a ...interface{}) {
   357→// FprintlnFunc returns a new function that prints the passed arguments as
   359→func (c *Color) FprintlnFunc() func(w io.Writer, a ...interface{}) {
   365→// PrintlnFunc returns a new function that prints the passed arguments as
   367→func (c *Color) PrintlnFunc() func(a ...interface{}) {
   373→// SprintFunc returns a new function that returns colorized strings for the
   379→func (c *Color) SprintFunc() func(a ...interface{}) string {
   385→// SprintfFunc returns a new function that returns colorized strings for the
   388→func (c *Color) SprintfFunc() func(format string, a ...interface{}) string {
   394→// SprintlnFunc returns a new function that returns colorized strings for the
   397→func (c *Color) SprintlnFunc() func(a ...interface{}) string {
   405→func (c *Color) sequence() string {
   416→func (c *Color) wrap(s string) string {
   424→func (c *Color) format() string {
   428→func (c *Color) unformat() string {
   443→// DisableColor disables the color output. Useful to not change any existing
   446→func (c *Color) DisableColor() {
   450→// EnableColor enables the color output. Use it in conjunction with
   452→func (c *Color) EnableColor() {
   456→func (c *Color) isNoColorSet() bool {
   466→// Equals returns a boolean value indicating whether two colors are equal.
   467→func (c *Color) Equals(c2 *Color) bool {
   487→func (c *Color) attrExists(a Attribute) bool {
   497→func boolPtr(v bool) *bool {
   501→func getCachedColor(p Attribute) *Color {
   514→func colorPrint(format string, p Attribute, a ...interface{}) {
   528→func colorString(format string, p Attribute, a ...interface{}) string {
   538→// Black is a convenient helper function to print with black foreground. A
   540→func Black(format string, a ...interface{}) { colorPrint(format, FgBlack, a...) }
   542→// Red is a convenient helper function to print with red foreground. A
   544→func Red(format string, a ...interface{}) { colorPrint(format, FgRed, a...) }
   546→// Green is a convenient helper function to print with green foreground. A
   548→func Green(format string, a ...interface{}) { colorPrint(format, FgGreen, a...) }
   550→// Yellow is a convenient helper function to print with yellow foreground.
   552→func Yellow(format string, a ...interface{}) { colorPrint(format, FgYellow, a...) }
   554→// Blue is a convenient helper function to print with blue foreground. A
   556→func Blue(format string, a ...interface{}) { colorPrint(format, FgBlue, a...) }
   558→// Magenta is a convenient helper function to print with magenta foreground.
   560→func Magenta(format string, a ...interface{}) { colorPrint(format, FgMagenta, a...) }
   562→// Cyan is a convenient helper function to print with cyan foreground. A
   564→func Cyan(format string, a ...interface{}) { colorPrint(format, FgCyan, a...) }
   566→// White is a convenient helper function to print with white foreground. A
   568→func White(format string, a ...interface{}) { colorPrint(format, FgWhite, a...) }
   570→// BlackString is a convenient helper function to return a string with black
   572→func BlackString(format string, a ...interface{}) string { return colorString(format, FgBlack, a...) }
   574→// RedString is a convenient helper function to return a string with red
   576→func RedString(format string, a ...interface{}) string { return colorString(format, FgRed, a...) }
   578→// GreenString is a convenient helper function to return a string with green
   580→func GreenString(format string, a ...interface{}) string { return colorString(format, FgGreen, a...) }
   582→// YellowString is a convenient helper function to return a string with yellow
   584→func YellowString(format string, a ...interface{}) string { return colorString(format, FgYellow, a...) }
   586→// BlueString is a convenient helper function to return a string with blue
   588→func BlueString(format string, a ...interface{}) string { return colorString(format, FgBlue, a...) }
   590→// MagentaString is a convenient helper function to return a string with magenta
   592→func MagentaString(format string, a ...interface{}) string {
   596→// CyanString is a convenient helper function to return a string with cyan
   598→func CyanString(format string, a ...interface{}) string { return colorString(format, FgCyan, a...) }
   600→// WhiteString is a convenient helper function to return a string with white
   602→func WhiteString(format string, a ...interface{}) string { return colorString(format, FgWhite, a...) }
   604→// HiBlack is a convenient helper function to print with hi-intensity black foreground. A
   606→func HiBlack(format string, a ...interface{}) { colorPrint(format, FgHiBlack, a...) }
   608→// HiRed is a convenient helper function to print with hi-intensity red foreground. A
   610→func HiRed(format string, a ...interface{}) { colorPrint(format, FgHiRed, a...) }
   612→// HiGreen is a convenient helper function to print with hi-intensity green foreground. A
   614→func HiGreen(format string, a ...interface{}) { colorPrint(format, FgHiGreen, a...) }
   616→// HiYellow is a convenient helper function to print with hi-intensity yellow foreground.
   618→func HiYellow(format string, a ...interface{}) { colorPrint(format, FgHiYellow, a...) }
   620→// HiBlue is a convenient helper function to print with hi-intensity blue foreground. A
   622→func HiBlue(format string, a ...interface{}) { colorPrint(format, FgHiBlue, a...) }
   624→// HiMagenta is a convenient helper function to print with hi-intensity magenta foreground.
   626→func HiMagenta(format string, a ...interface{}) { colorPrint(format, FgHiMagenta, a...) }
   628→// HiCyan is a convenient helper function to print with hi-intensity cyan foreground. A
   630→func HiCyan(format string, a ...interface{}) { colorPrint(format, FgHiCyan, a...) }
   632→// HiWhite is a convenient helper function to print with hi-intensity white foreground. A
   634→func HiWhite(format string, a ...interface{}) { colorPrint(format, FgHiWhite, a...) }
   636→// HiBlackString is a convenient helper function to return a string with hi-intensity black
   638→func HiBlackString(format string, a ...interface{}) string {
   642→// HiRedString is a convenient helper function to return a string with hi-intensity red
   644→func HiRedString(format string, a ...interface{}) string { return colorString(format, FgHiRed, a...) }
   646→// HiGreenString is a convenient helper function to return a string with hi-intensity green
   648→func HiGreenString(format string, a ...interface{}) string {
   652→// HiYellowString is a convenient helper function to return a string with hi-intensity yellow
   654→func HiYellowString(format string, a ...interface{}) string {
   658→// HiBlueString is a convenient helper function to return a string with hi-intensity blue
   660→func HiBlueString(format string, a ...interface{}) string { return colorString(format, FgHiBlue, a...) }
   662→// HiMagentaString is a convenient helper function to return a string with hi-intensity magenta
   664→func HiMagentaString(format string, a ...interface{}) string {
   668→// HiCyanString is a convenient helper function to return a string with hi-intensity cyan
   670→func HiCyanString(format string, a ...interface{}) string { return colorString(format, FgHiCyan, a...) }
   672→// HiWhiteString is a convenient helper function to return a string with hi-intensity white
   674→func HiWhiteString(format string, a ...interface{}) string {
   679→func sprintln(a ...interface{}) string {
color_windows.go
     9→func init() {
doc.go
