tests/snapshots/snapshots__fixture_commander.snap
---
source: tests/snapshots.rs
expression: output
---
argument.js
     3→class Argument
    13→  constructor
    48→  name
    56→  _collectValue
    73→  default
    86→  argParser
    98→  choices
   119→  argRequired
   129→  argOptional
   143→function humanReadableArgName
command.js
    13→class Command
    20→  constructor
    99→  copyInheritedSettings
   121→  _getCommandAndAncestors
   155→  command
   192→  createCommand
   203→  createHelp
   215→  configureHelp
   245→  configureOutput
   261→  showHelpAfterError
   273→  showSuggestionAfterError
   288→  addCommand
   316→  createArgument
   336→  argument
   359→  arguments
   375→  addArgument
   409→  helpCommand
   443→  addHelpCommand
   463→  _getHelpCommand
   487→  hook
   508→  exitOverride
   533→  _exit
   556→  action
   585→  createOption
   599→  _callParseArg
   619→  _registerOption
   644→  _registerCommand
   670→  addOption
   741→  _optionEx
   788→  option
   805→  requiredOption
   826→  combineFlagAndOptionalValue
   837→  allowUnknownOption
   848→  allowExcessArguments
   861→  enablePositionalOptions
   875→  passThroughOptions
   885→  _checkForBrokenPassThrough
   905→  storeOptionsAsProperties
   925→  getOptionValue
   940→  setOptionValue
   953→  setOptionValueWithSource
   971→  getOptionValueSource
   983→  getOptionValueSourceWithGlobals
  1001→  _prepareUserArgs
  1090→  parse
  1119→  async parseAsync
  1127→  _prepareForParse
  1141→  saveStateBeforeParse
  1158→  restoreStateBeforeParse
  1183→  _checkForMissingExecutable
  1202→  _executeSubCommand
  1352→  _dispatchSubcommand
  1380→  _dispatchHelpCommand
  1403→  _checkNumberOfArguments
  1428→  _processArguments
  1481→  _chainOrCall
  1499→  _chainOrCallHooks
  1531→  _chainOrCallSubCommandHook
  1550→  _parseCommand
  1649→  _findCommand
  1664→  _findOption
  1675→  _checkForMissingMandatoryOptions
  1694→  _checkForConflictingLocalOptions
  1723→  _checkForConflictingOptions
  1748→  parseOptions
  1902→  opts
  1924→  optsWithGlobals
  1940→  error
  1966→  _parseOptionsEnv
  1996→  _parseOptionsImplied
  2034→  missingArgument
  2046→  optionMissingArgument
  2058→  missingMandatoryOptionValue
  2070→  _conflictingOption
  2114→  unknownOption
  2146→  _excessArguments
  2162→  unknownCommand
  2195→  version
  2218→  description
  2234→  summary
  2249→  alias
  2289→  aliases
  2304→  usage
  2331→  name
  2344→  helpGroup
  2363→  commandsGroup
  2382→  optionsGroup
  2392→  _initOptionGroup
  2401→  _initCommandGroup
  2419→  nameFromFilename
  2437→  executableDir
  2450→  helpInformation
  2475→  _getOutputContext
  2505→  outputHelp
  2559→  helpOption
  2592→  _getHelpOption
  2607→  addHelpOption
  2621→  help
  2656→  addHelpText
  2686→  _outputHelpIfRequested
  2705→function incrementNodeInspectorPort
  2752→function useColor
error.js
     4→class CommanderError
    11→  constructor
    25→class InvalidArgumentError
    30→  constructor
help.js
    12→class Help
    13→  constructor
    29→  prepareContext
    40→  visibleCommands
    62→  compareOptions
    79→  visibleOptions
   112→  visibleGlobalOptions
   139→  visibleArguments
   162→  subcommandTerm
   182→  optionTerm
   193→  argumentTerm
   205→  longestSubcommandTermLength
   224→  longestOptionTermLength
   241→  longestGlobalOptionTermLength
   258→  longestArgumentTermLength
   276→  commandUsage
   300→  commandDescription
   313→  subcommandDescription
   325→  optionDescription
   372→  argumentDescription
   403→  formatItemList
   417→  groupItems
   443→  formatHelp
   535→  displayWidth
   545→  styleTitle
   549→  styleUsage
   563→  styleCommandDescription
   566→  styleOptionDescription
   569→  styleSubcommandDescription
   572→  styleArgumentDescription
   575→  styleDescriptionText
   578→  styleOptionTerm
   581→  styleSubcommandTerm
   594→  styleArgumentTerm
   597→  styleOptionText
   600→  styleArgumentText
   603→  styleSubcommandText
   606→  styleCommandText
   618→  padWidth
   633→  preformatted
   650→  formatItem
   695→  boxWrap
   740→function stripColor
option.js
     3→class Option
    11→  constructor
    47→  default
    65→  preset
    82→  conflicts
   100→  implies
   120→  env
   132→  argParser
   144→  makeOptionMandatory
   156→  hideHelp
   165→  _collectValue
   181→  choices
   203→  name
   217→  attributeName
   230→  helpGroup
   243→  is
   256→  isBoolean
   268→class DualOptions
   272→  constructor
   297→  valueFromOption
   316→function camelcase
   328→function splitOptionFlags
suggestSimilar.js
     1→const maxDistance
     3→function editDistance
    56→function suggestSimilar
